fixed overlapping lvs for string values.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -594,9 +594,8 @@ body #grid * {
     .quote {
       display: inline-block;
     }
-    position: relative;
     .computed-value-value {
-      bottom: 0px;
+      bottom: 30px;
     }
   }
 
